force-app/main/default/objects/AccountTypeAudit__c/AccountTypeAudit__c.object-meta.xml
<CustomObject>
    <label>AccountIndustryAudit</label>
    <nameField>
        <displayFormat>ATAN - {0000}</displayFormat>
        <label>AccountIndustryAudit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AccountIndustryAudits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>