force-app/main/default/objects/AccountTypeAudit__c/fields/Account_New_Industry__c.field-meta.xml
<CustomField>
    <fullName>Account_New_Industry__c</fullName>
    <label>Account New Industry</label>
    <length>200</length>
    <type>Text</type>
</CustomField>