force-app/main/default/objects/AccountTypeAudit__c/fields/Account_Old_Industry__c.field-meta.xml
<CustomField>
    <fullName>Account_Old_Industry__c</fullName>
    <label>Account Old Industry</label>
    <length>200</length>
    <type>Text</type>
</CustomField>